log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-service
  labels:
    app: log-output-app
spec:
  selector:
    app: log-output-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
